[metadata]
name = nextion
version = attr: nextion.__version__
author = Jevgeni Kiski
author_email = yozik04@gmail.com
description = Nextion display serial client
description-file = README.md
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = nextion serial async asyncio
url = https://github.com/yozik04/nextion
project_urls =
    Bug Tracker = https://github.com/yozik04/nextion/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
license = LGPL 3

[options]
packages = find:
python_requires = >=3.8.0, <4
install_requires =
    pyserial-asyncio-fast
zip_safe = True
include_package_data = True
exclude = tests, tests.*

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
nextion = py.typed

[options.entry_points]
console_scripts =
    nextion-fw-upload = nextion.console_scripts.upload_firmware:main

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E128 continuation line under-indented for visual indent
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    E128
noqa-require-code = True

[coverage:report]
show_missing = true
